--- a/docs/src/css/living-docs.css
+++ b/docs/src/css/living-docs.css
@@ -52,6 +52,7 @@
     border-radius: 0.1em;
     padding: 0.25em 0.65em 0.25em 0.65em;
     border:none;
+    font-family: "Roboto",sans-serif;
 }
 .ContentOption:hover {
     background-size: 4px 100%;
