--- a/docs/src/css/living-docs.css
+++ b/docs/src/css/living-docs.css
@@ -37,7 +37,7 @@
     padding: 5px 18px 5px 18px;
     display: none;
     overflow: hidden;
-    background-color: #dde6e9;
+    background-color: #e9f1f3;
 }
 
 .ContentOption {
